--- a/global.css
+++ b/global.css
@@ -16,4 +16,65 @@
 body {
     width: 100vw;
     min-height: 100dvh;
+    line-height: 1.6;
+    color: #333;
+    display: grid;
+    grid-template-rows: 1fr 8fr 1fr;
+}
+
+header {
+    background-color: var(--text-primary);
+    color: #fff;
+    padding: 1rem 0;
+    display: flex;
+    align-items: center;
+}
+
+nav {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 2rem;
+}
+
+.logo {
+    font-size: 1.5rem;
+    font-weight: bold;
+}
+
+nav ul {
+    display: flex;
+    list-style: none;
+}
+
+nav ul li {
+    margin-left: 2rem;
+}
+
+nav ul li a {
+    color: #fff;
+    text-decoration: none;
+}
+
+footer {
+    background-color: var(--text-primary);
+    color: #fff;
+    text-align: center;
+    padding: 1rem 0;
+}
+
+@media (max-width: 500px) {
+    nav {
+        flex-direction: column;
+    }
+
+    nav ul {
+        margin-top: 1rem;
+    }
+
+    nav ul li {
+        margin-left: 1rem;
+        margin-right: 1rem;
+    }
 }
